[package]
name = "ult_logger"
version = "0.1.0"
authors = []
edition = "2021"

[[bin]]
name = "db"
path = "src/db.rs"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/GradualSyrup/skyline-rs", branch = "report-user-test" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
acmd = { git = "https://github.com/ultimate-research/skyline-acmd.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.3.0"
rand = { git = "https://github.com/skyline-rs/rand" }
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
google-sheets4 = "*"
hyper-rustls = "^0.22"
yup-oauth2 = "^3.0"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true


